2009-10-21  Girish Ramakrishnan  <girish@forwardbias.in>

        Reviewed by Holger Freyther.

        Plugins: Create manual tests for testing plugins
        
        Create two test files:
        1. windowed.html - Test plugin in windowed mode.
        2. windowless.html - Test plugin in windowless mode.

        https://bugs.webkit.org/show_bug.cgi?id=30503

        * manual-tests/plugins/windowed.html: Added.
        * manual-tests/plugins/windowless.html: Added.

2009-10-21  Satoshi Nakagawa  <psychs@limechat.net>

        Reviewed by Darin Adler.

        Fixed Japanese text search problems.
        Treat small kana letters and kana letters as different characters in search.
        Do not ignore diacritic marks in search for Japanese texts.

        https://bugs.webkit.org/show_bug.cgi?id=30437

        Test: fast/text/international/japanese-kana-letters.html

        * editing/TextIterator.cpp:
        (WebCore::createCollator):
        (WebCore::collator):
        (WebCore::createSearcher):

2009-10-20  Eric Z. Ayers  <zundel@google.com>

        Reviewed by Timothy Hatcher.

        Changes TimelineItems to be created with raw timestamps as opposed
        to a time relative to a start of session.  Normalized timestamps cause
        problems when monitoring a browsing session across multiple page
        transitions.

        * inspector/InspectorTimelineAgent.cpp:
        (WebCore::InspectorTimelineAgent::InspectorTimelineAgent):
        (WebCore::InspectorTimelineAgent::willDispatchDOMEvent):
        (WebCore::InspectorTimelineAgent::willLayout):
        (WebCore::InspectorTimelineAgent::willRecalculateStyle):
        (WebCore::InspectorTimelineAgent::willPaint):
        (WebCore::InspectorTimelineAgent::willWriteHTML):
        (WebCore::InspectorTimelineAgent::reset):
        (WebCore::InspectorTimelineAgent::didCompleteCurrentRecord):
        * inspector/InspectorTimelineAgent.h:

2009-10-20  Mark Rowe  <mrowe@apple.com>
