@@ -1,3 +1,14 @@
+2009-10-20  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Timothy Hatcher.
+
+        Web Inspector: Fix DOM Agent leak.
+
+        https://bugs.webkit.org/show_bug.cgi?id=30615
+
+        * inspector/InspectorController.cpp:
+        (WebCore::InspectorController::~InspectorController):
+
 2009-10-21  Girish Ramakrishnan  <girish@forwardbias.in>
 
         Reviewed by Holger Freyther.
